--- a/sass/blocks/achievement.scss
+++ b/sass/blocks/achievement.scss
@@ -2,6 +2,7 @@
   width: 280px;
   padding-top: 41px;
   border: none;
+
   label {
     @include form-typography;
     display: block;
@@ -14,29 +15,29 @@
     display: none;
   }
 
-  input[type="checkbox"]+label {
+  input[type="checkbox"] + label {
     position: relative;
   }
 
-  input[type="checkbox"]+label::before {
+  input[type="checkbox"] + label::before {
     content: "";
     position: absolute;
     top: -3px;
-    left: 0px;
+    left: 0;
     width: 38px;
     height: 38px;
     background-color: #ffffff;
     border: 2px solid #e5e5e5;
   }
 
-  input[type="checkbox"]:checked+label::after {
+  input[type="checkbox"]:checked + label::after {
     content: "";
     position: absolute;
     top: -3px;
-    left: 0px;
+    left: 0;
     width: 38px;
     height: 38px;
-    background: url(../img/icon-yes-pink.svg) center no-repeat;
+    background: url("../img/icon-yes-pink.svg") center no-repeat;
     background-color: #ffffff;
     border: 2px solid #e5e5e5;
   }
@@ -50,7 +51,7 @@
   padding-bottom: 31px;
 }
 
-@media(min-width:$tablet) {
+@media (min-width: $tablet) {
   .achievement {
     margin-top: 44px;
     order: 4;
@@ -63,9 +64,10 @@
   .achievement__list-wrapper {
     width: 620px;
     border: 2px solid #e5e5e5;
+
     .form__text--pink {
       width: auto;
-      padding: 0px 32px;
+      padding: 0 32px;
       font-size: 14px;
     }
 
@@ -74,19 +76,19 @@
       padding-bottom: 52px;
     }
 
-    input[type="checkbox"]+label::before {
+    input[type="checkbox"] + label::before {
       top: -4px;
       left: 60px;
     }
 
-    input[type="checkbox"]:checked+label::after {
+    input[type="checkbox"]:checked + label::after {
       top: -4px;
       left: 60px;
     }
   }
 }
 
-@media(min-width:$desktop) {
+@media (min-width: $desktop) {
   .achievement {
     margin-top: 46px;
   }
@@ -101,6 +103,7 @@
     flex-wrap: wrap;
     align-content: flex-start;
     height: 184px;
+
     label {
       padding-left: 116px;
       padding-bottom: 53px;
