--- a/sass/blocks/app.scss
+++ b/sass/blocks/app.scss
@@ -1,8 +1,10 @@
 .apps__list {
   width: 280px;
   border: none;
+
   label {
     position: relative;
+
     @include form-typography;
     display: block;
     padding-left: 70px;
@@ -13,11 +15,11 @@
     display: none;
   }
 
-  input[type="radio"]+label::before {
+  input[type="radio"] + label::before {
     content: "";
     position: absolute;
     top: -5px;
-    left: 0px;
+    left: 0;
     width: 41px;
     height: 41px;
     background-color: #ffffff;
@@ -25,7 +27,7 @@
     border-radius: 50%;
   }
 
-  input[type="radio"]:checked+label::after {
+  input[type="radio"]:checked + label::after {
     content: "";
     position: absolute;
     top: 8px;
@@ -46,7 +48,7 @@
   padding-bottom: 32px;
 }
 
-@media(min-width:$tablet) {
+@media (min-width: $tablet) {
   .apps {
     margin-top: 46px;
     order: 2;
@@ -63,9 +65,10 @@
   .apps__list {
     width: 620px;
     border: 2px solid #e5e5e5;
+
     .form__text--pink {
       width: auto;
-      padding: 0px 32px;
+      padding: 0 32px;
       font-size: 14px;
     }
 
@@ -73,23 +76,24 @@
       padding-left: 120px;
     }
 
-    input[type="radio"]+label::before {
+    input[type="radio"] + label::before {
       left: 60px;
     }
 
-    input[type="radio"]:checked+label::after {
+    input[type="radio"]:checked + label::after {
       left: 72px;
     }
   }
 }
 
-@media(min-width:$desktop) {
+@media (min-width: $desktop) {
   .apps {
     margin-top: 36px;
   }
 
   .apps__list {
     width: 435px;
+
     .form__text--pink {
       padding: 0 26px;
     }
@@ -101,22 +105,23 @@
     }
 
     .apps__windows {
-      padding-bottom: 0px;
+      padding-bottom: 0;
+
       label {
         padding-bottom: 61px;
       }
     }
 
-    input[type="radio"]+label::before {
+    input[type="radio"] + label::before {
       top: -1px;
       left: 73px;
     }
 
-    input[type="radio"]:checked+label::before {
+    input[type="radio"]:checked + label::before {
       border-color: #d22856;
     }
 
-    input[type="radio"]:checked+label::after {
+    input[type="radio"]:checked + label::after {
       left: 86px;
       top: 12px;
     }
