--- a/sass/blocks/contacts.scss
+++ b/sass/blocks/contacts.scss
@@ -2,10 +2,12 @@
   padding-top: 32px;
   padding-bottom: 10px;
 }
+
 .contacts__fields {
   width: 280px;
   margin: 0 auto;
   border: none;
+
   label {
     display: block;
     padding-left: 23px;
@@ -25,12 +27,13 @@
     padding: 15px;
     padding-left: 21px;
     box-sizing: border-box;
+
     @include form-typography;
     border: $form-border;
   }
 }
 
-@media(min-width:$tablet) {
+@media (min-width: $tablet) {
   .contacts {
     order: 3;
     margin-top: 25px;
@@ -40,6 +43,7 @@
     width: 620px;
     padding-top: 40px;
     border: 2px solid #e5e5e5;
+
     .form__text--pink {
       display: block;
       width: auto;
@@ -49,7 +53,7 @@
   }
 
   .contacts__phone,
-  .contacts__email{
+  .contacts__email {
     display: flex;
     flex-direction: column-reverse;
     flex-wrap: wrap;
@@ -57,6 +61,7 @@
     position: relative;
     width: 500px;
     margin: 0 auto;
+
     input {
       width: 100%;
       margin-bottom: 11px;
@@ -67,7 +72,7 @@
       content: "";
       position: absolute;
       top: 2px;
-      right: 0px;
+      right: 0;
       width: 60px;
       height: 60px;
       background-size: contain;
@@ -90,10 +95,11 @@
   }
 }
 
-@media(min-width:$desktop) {
+@media (min-width: $desktop) {
   .contacts {
     width: 100%;
     margin-top: 15px;
+
     .contacts__fields {
       width: 940px;
       padding-top: 47px;
@@ -103,8 +109,9 @@
   .contacts__phone,
   .contacts__email {
     width: 375px;
-    margin: 0px;
+    margin: 0;
     margin-top: -13px;
+
     input {
       margin-bottom: 10px;
     }
@@ -113,6 +120,7 @@
       padding-bottom: 13px;
     }
   }
+
   .contacts__phone {
     float: left;
     margin-left: 60px;
