--- a/sass/blocks/pop-up.scss
+++ b/sass/blocks/pop-up.scss
@@ -1,29 +1,29 @@
 .pop-up__wrap {
   text-align: center;
   padding: 41px 20px;
-  padding-bottom: 0px;
+  padding-bottom: 0;
 }
 
 .pop-up--fail {
   position: fixed;
   z-index: 10;
   top: 10px;
-  left: 0px;
+  left: 0;
   display: block;
   width: 320px;
   background-color: #ffffff;
-  box-shadow: 0px 5px 13px 0px rgba(0, 0, 0, 0.3);
+  box-shadow: 0 5px 13px 0 rgba(0, 0, 0, 0.3);
 }
 
 .pop-up--success {
   position: fixed;
   z-index: 10;
   top: 30px;
-  left: 0px;
+  left: 0;
   display: block;
   width: 320px;
   background-color: #ffffff;
-  box-shadow: 0px 5px 13px 0px rgba(0, 0, 0, 0.3);
+  box-shadow: 0 5px 13px 0 rgba(0, 0, 0, 0.3);
 }
 
 .pop-up__fail,
@@ -32,7 +32,7 @@
 }
 
 .pop-up__header {
-  margin: 0px;
+  margin: 0;
   font-family: $font-bold;
   font-size: 18px;
   line-height: 24px;
@@ -41,18 +41,18 @@
 }
 
 .pop-up__text {
-  margin: 0px;
+  margin: 0;
   padding: 20px 18px;
-  padding-bottom: 0px;
+  padding-bottom: 0;
   font-family: $font-plain;
   font-size: 14px;
   line-height: 24px;
   text-align: center;
 }
 
-@media(min-width:$tablet) {
+@media (min-width: $tablet) {
   .pop-up--fail,
-  .pop-up--success{
+  .pop-up--success {
     width: 458px;
     top: 80px;
     left: 15%;
@@ -60,7 +60,7 @@
 
   .pop-up__wrap {
     padding: 44px 70px;
-    padding-bottom: 0px;
+    padding-bottom: 0;
   }
 
   .pop-up__header {
@@ -80,13 +80,14 @@
     padding-top: 53px;
     padding-bottom: 49px;
     background-color: #f2f2f2;
+
     .btn {
       margin: auto;
     }
   }
 }
 
-@media(min-width:$desktop) {
+@media (min-width: $desktop) {
   .pop-up--success {
     width: 780px;
     left: 17.5%;
