--- a/sass/blocks/price-list.scss
+++ b/sass/blocks/price-list.scss
@@ -67,7 +67,7 @@
   color: #ffffff;
   transform: rotate(-45deg);
 
-  &:before {
+  &::before {
     content: "";
     position: absolute;
     top: -4px;
@@ -89,7 +89,7 @@
   line-height: 30px;
   text-transform: uppercase;
   color: $dark-text;
-  background-color: #fff;
+  background-color: #ffffff;
   border-left: 2px solid #e5e5e5;
   border-bottom: 2px solid #e5e5e5;
 
@@ -101,7 +101,7 @@
 
 .price-list__icon {
   padding: 9px 7px 9px 22px;
-  background-color: #fff;
+  background-color: #ffffff;
   border-right: 2px solid #e5e5e5;
   border-bottom: 2px solid #e5e5e5;
 }
@@ -113,15 +113,15 @@
   padding-top: 3px;
 }
 
-#price-list-btn-1:checked~.price-list__slider {
+#price-list-btn-1:checked ~ .price-list__slider {
   transform: translateX(20px);
 }
 
-#price-list-btn-2:checked~.price-list__slider {
+#price-list-btn-2:checked ~ .price-list__slider {
   transform: translateX(-241px);
 }
 
-#price-list-btn-3:checked~.price-list__slider {
+#price-list-btn-3:checked ~ .price-list__slider {
   transform: translateX(-525px);
 }
 
@@ -147,18 +147,18 @@
   }
 }
 
-#price-list-btn-1:checked~.price-list__slider-controls .price-list__slider-control:first-child {
-  background-color: #fff;
+#price-list-btn-1:checked ~ .price-list__slider-controls .price-list__slider-control:first-child {
+  background-color: #ffffff;
   box-shadow: 0 0 0 3px #283645;
 }
 
-#price-list-btn-2:checked~.price-list__slider-controls .price-list__slider-control:nth-child(2) {
-  background-color: #fff;
+#price-list-btn-2:checked ~ .price-list__slider-controls .price-list__slider-control:nth-child(2) {
+  background-color: #ffffff;
   box-shadow: 0 0 0 3px #283645;
 }
 
-#price-list-btn-3:checked~.price-list__slider-controls .price-list__slider-control:nth-child(3) {
-  background-color: #fff;
+#price-list-btn-3:checked ~ .price-list__slider-controls .price-list__slider-control:nth-child(3) {
+  background-color: #ffffff;
   box-shadow: 0 0 0 3px #283645;
 }
 
@@ -209,15 +209,15 @@
     }
   }
 
-  #price-list-btn-1:checked~.price-list__slider {
+  #price-list-btn-1:checked ~ .price-list__slider {
     transform: none;
   }
 
-  #price-list-btn-2:checked~.price-list__slider {
+  #price-list-btn-2:checked ~ .price-list__slider {
     transform: none;
   }
 
-  #price-list-btn-3:checked~.price-list__slider {
+  #price-list-btn-3:checked ~ .price-list__slider {
     transform: none;
   }
 
@@ -249,7 +249,7 @@
     top: 3px;
     left: 4px;
 
-    &:before {
+    &::before {
       top: 1px;
       left: -16px;
       width: 61px;
@@ -287,7 +287,6 @@
 }
 
 @media (min-width: $desktop) {
-
   .price-list__container {
     padding-bottom: 96px;
     padding-left: 10px;
@@ -325,7 +324,7 @@
     top: 12px;
     left: 10px;
 
-    &:before {
+    &::before {
       top: -6px;
       left: -21px;
       width: 75px;
