--- a/sass/blocks/btn.scss
+++ b/sass/blocks/btn.scss
@@ -28,8 +28,7 @@
 
   &--send {
     display: block;
-    margin: 29px auto;
-    margin-bottom: 37px;
+    margin: 0 auto;
     padding: 19px 43px;
     color: #ffffff;
     background-color: #2aab6d;
