--- a/sass/blocks/textarea.scss
+++ b/sass/blocks/textarea.scss
@@ -7,6 +7,7 @@
     height: 200px;
     padding: 20px;
     padding-top: 14px;
+    border: 2px solid #e5e5e5;
 
     @include form-typography;
   }
