--- a/sass/blocks/slider.scss
+++ b/sass/blocks/slider.scss
@@ -15,6 +15,14 @@
   border-radius: 50%;
 }
 
+.slider__pagination-item:hover {
+  background-color: #7e868f;
+}
+
+.slider__pagination-item:active {
+  background-color: #e9ebec;
+}
+
 .slider__pagination-item--active {
   width: 12px;
   height: 12px;
