--- a/sass/blocks/app.scss
+++ b/sass/blocks/app.scss
@@ -27,6 +27,14 @@
     border-radius: 50%;
   }
 
+  input[type="radio"] + label:hover::before {
+    border-color: $dark-text;
+  }
+
+  input[type="radio"]:checked + label::before {
+    border-color: #e5e5e5;
+  }
+
   input[type="radio"]:checked + label::after {
     content: "";
     position: absolute;
@@ -37,6 +45,14 @@
     background-color: #d22856;
     border: 2px solid #d22856;
     border-radius: 50%;
+  }
+
+  input[type="radio"]:checked + label:hover::before {
+    border-color: $dark-text;
+  }
+
+  input[type="radio"]:checked + label:active::before {
+    border-color: $pink-text;
   }
 }
 
@@ -115,10 +131,6 @@
     input[type="radio"] + label::before {
       top: -1px;
       left: 73px;
-    }
-
-    input[type="radio"]:checked + label::before {
-      border-color: #d22856;
     }
 
     input[type="radio"]:checked + label::after {
