--- a/sass/blocks/contacts.scss
+++ b/sass/blocks/contacts.scss
@@ -72,7 +72,7 @@
       content: "";
       position: absolute;
       top: 2px;
-      right: 0;
+      right: 2px;
       width: 60px;
       height: 60px;
       background-size: contain;
