--- a/sass/blocks/banner.scss
+++ b/sass/blocks/banner.scss
@@ -1,5 +1,6 @@
 .banner {
   margin-top: -70px;
+  background-color: $dark-text;
   background: url("../img/bg-back-mobile@1x.jpg") no-repeat center 0;
   background-size: cover;
 }
