--- a/sass/blocks/page-header.scss
+++ b/sass/blocks/page-header.scss
@@ -13,7 +13,7 @@
 }
 
 .page-header__logo:focus {
-  background-image: url("../img/logo-pink-hover-mobile.svg");
+  background: url("../img/logo-pink-hover-mobile.svg") no-repeat 21px 20px;
 }
 
 .page-header__logo:active {
