--- a/sass/blocks/btn.scss
+++ b/sass/blocks/btn.scss
@@ -37,6 +37,10 @@
     text-transform: uppercase;
   }
 
+  &--send:hover {
+    background-color: #1c9b5e;
+  }
+
   &--download {
     padding: 16px 0;
     color: #ffffff;
